--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-dockerhub-webhook",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Docker webhook",
   "main": "server.js",
   "repository": {
@@ -18,7 +18,8 @@
   "dependencies": {
     "config": "^1.14.0",
     "hapi": "^8.8.0",
-    "hoek": "^2.14.0"
+    "hoek": "^2.14.0",
+    "request": "^2.58.0"
   },
   "bin": {
     "docker-webhook": "server.js"
